# missilesim

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  vcpkg.json
assets/: assets.md
src/: main.cpp
src/application/: Application.cpp  Application.h  ApplicationCamera.cpp  ApplicationDetail.h  ApplicationEffects.cpp  ApplicationInput.cpp  ApplicationLifecycle.cpp  ApplicationMissile.cpp  ApplicationSettings.cpp  ApplicationTargets.cpp  ApplicationTrajectory.cpp  ApplicationUI.cpp
src/audio/: AudioSystem.cpp  AudioSystem.h  AudioSystemDetail.h  AudioSystemEmitters.cpp  AudioSystemImpl.h  AudioSystemLifecycle.cpp  AudioSystemPlayback.cpp  AudioSystemSync.cpp
src/objects/: Flare.cpp  Flare.h  Missile.cpp  Missile.h  PhysicsObject.cpp  PhysicsObject.h  Target.cpp  Target.h
src/physics/: Atmosphere.cpp  Atmosphere.h  PhysicsEngine.cpp  PhysicsEngine.h
src/physics/forces/: Drag.cpp  Drag.h  Gravity.cpp  Gravity.h  Lift.cpp  Lift.h
src/rendering/: Renderer.cpp  Renderer.h  RendererAssets.cpp  RendererCamera.cpp  RendererDebug.cpp  RendererRendering.cpp  RendererSceneFrame.cpp  RendererShaders.cpp  SceneEffects.cpp  SceneEffects.h  SceneEffectsBuffers.cpp  SceneEffectsDetail.h  SceneEffectsEmission.cpp  SceneEffectsLifecycle.cpp  SceneEffectsRendering.cpp  SceneEffectsShaders.cpp  SceneEffectsUpdate.cpp
tools/: generate_audio_assets.py
